<?xml version="1.0"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.0</version>
  <description>Bringup: robot_state_publisher + ros2_control + diff_drive_controller + teleop GUI</description>
  <maintainer email="pavetech@example.com">pavetech</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>fastech_hardware</exec_depend>
  <exec_depend>my_robot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>